<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_light">
        <ImageView
            android:id="@+id/login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/login_userInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawablePadding="10dp"
            android:layout_margin="10dp"
            android:background="@drawable/shape_edittext"/>


        <EditText
            android:id="@+id/login_passwordInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawablePadding="10dp"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:background="@drawable/shape_edittext"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <CheckBox
                android:id="@+id/login_Remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_password"/>

            <CheckBox
                android:id="@+id/login_Automatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/automatic_logon"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/login_forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_groupview"
                android:text="@string/forget_password"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/login_registerUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/selector_groupview"
                android:text="@string/registered_account"
                android:textSize="20sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/login_immediatelyLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="@drawable/shape_button_blue"
            android:textSize="20sp"
            android:text="@string/login_immediately" />
    </LinearLayout>
</LinearLayout>