<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/holo_blue_light">

        <ImageView
            android:id="@+id/revisedate_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/modify_data"
            android:textSize="20sp" />

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="@dimen/activity_horizontal_margin"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/revisedate_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/photo"/>

            <TextView
                android:id="@+id/revisedate_usernameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/revisedate_picture"
                android:textSize="20sp"
                android:padding="5dp"
                android:text="@string/account"/>
            <TextView
                android:id="@+id/revisedate_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/revisedate_usernameText"
                android:layout_below="@id/revisedate_picture"
                android:textSize="20sp"
                android:padding="5dp"
                android:text="123"/>

            <TextView
                android:id="@+id/revisedate_passwordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/revisedate_usernameText"
                android:textSize="20sp"
                android:padding="5dp"
                android:text="@string/password"/>
            <TextView
                android:id="@+id/revisedate_updatePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/revisedate_passwordText"
                android:layout_below="@id/revisedate_usernameText"
                android:textColor="@android:color/holo_blue_light"
                android:padding="5dp"
                android:textSize="20sp"
                android:text="@string/modify_password"/>

            <TextView
                android:id="@+id/revisedate_nicknameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/revisedate_passwordText"
                android:padding="5dp"
                android:textSize="20sp"
                android:text="@string/nickname"/>

            <EditText
                android:id="@+id/revisedate_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/revisedate_nicknameText"
                android:layout_alignBottom="@+id/revisedate_nicknameText"
                android:layout_toEndOf="@+id/revisedate_passwordText"
                android:padding="5dp"
                android:textSize="20sp"
                android:hint="@string/input_nickname" />

            <Button
                android:id="@+id/revisedate_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/revisedate_nicknameText"
                android:background="@drawable/shape_button_blue"
                android:layout_centerHorizontal="true"
                android:layout_margin="50dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:text="@string/modify_completed"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
