<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname" />

        <TextView
            android:id="@+id/writeTopic_nickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="第二小哥"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category" />

        <Spinner
            android:id="@+id/writeTopic_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/writeTopic_category1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic" />

        <EditText
            android:id="@+id/writeTopic_topic"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/shape_edittext"/>
    </LinearLayout>

</LinearLayout>
