<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="@android:color/holo_blue_light">

        <ImageView
            android:id="@+id/upload_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:text="@string/upload"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <com.edu.gdqy.Tool.ImageTextGroupView
            android:id="@+id/upload_shootUpload"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_groupview"/>

        <TextView
            android:layout_width="0.1dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/holo_blue_light"/>

        <com.edu.gdqy.Tool.ImageTextGroupView
            android:id="@+id/upload_localUpload"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_groupview"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/AC_Upload_Preview"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3" />

    <TextView
        android:id="@+id/upload_vedioName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/vedio_name" />

    <Button
        android:id="@+id/upload_uploadBtn"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:layout_gravity="center"
        android:background="@drawable/shape_button_blue"
        android:text="@string/confirm_upload" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />
</LinearLayout>
